Some more news info.

--- a/readme.html
+++ b/readme.html
@@ -1,6 +1,6 @@
 <html>
 
-<!-- $Id: readme.html,v 1.37 2004-12-31 22:03:23 marcus256 Exp $ -->
+<!-- $Id: readme.html,v 1.38 2005-01-23 12:10:18 marcus256 Exp $ -->
 
 <head>
   <title>GLFW Readme file</title>
@@ -519,6 +519,8 @@ version of GLFW.
  <li>[Win32] Bugfix: The DLL now exports glfwSetTime</li>
  <li>[Win32] Fix: The GLFW window is now placed in the upper left corner
      of the desktop working area</li>
+ <li>[Win32/X11] Bugfix: More robust check for SwapInterval</li>
+ <li>[X11] Bugfix: Added support for GLX extensions in glfwExtensionSupported</li>
  <li>[X11] Bugfix: More robust fullscreen mode (?)</li>
  <li>[X11] Bugfix: Runtime check of XF86VidMode support for the active
      display</li>
