--- a/readme.html
+++ b/readme.html
@@ -1,6 +1,6 @@
 <html>
 
-<!-- $Id: readme.html,v 1.38 2005-01-23 12:10:18 marcus256 Exp $ -->
+<!-- $Id: readme.html,v 1.39 2005-02-27 19:17:21 elmindreda Exp $ -->
 
 <head>
   <title>GLFW Readme file</title>
@@ -872,7 +872,7 @@ useful for OpenGL development.
   <li>Keith Bauer, for his invaluable help with porting GLFW to Mac OS X,
   and for his many ideas.</li><br><br>
 
-  <li>Camilla Drefvenborg, for her efforts with porting GLFW to Mac OS X
+  <li>Camilla Berglund, for her efforts with porting GLFW to Mac OS X
   (continuing Keith Bauers work).</li><br><br>
 
   <li>Ozzy @ <a href="http://www.orkysquad.org" target="_blank">Orkysquad</a>,
