Added note about USB joysticks under X11 (Linux)

--- a/readme.html
+++ b/readme.html
@@ -1,6 +1,6 @@
 <html>
 
-<!-- $Id: readme.html,v 1.39 2005-02-27 19:17:21 elmindreda Exp $ -->
+<!-- $Id: readme.html,v 1.40 2005-03-14 20:47:06 marcus256 Exp $ -->
 
 <head>
   <title>GLFW Readme file</title>
@@ -520,6 +520,7 @@ version of GLFW.
  <li>[Win32] Fix: The GLFW window is now placed in the upper left corner
      of the desktop working area</li>
  <li>[Win32/X11] Bugfix: More robust check for SwapInterval</li>
+ <li>[X11] Added support for USB joysticks under Linux (/dev/input/js*)</li>
  <li>[X11] Bugfix: Added support for GLX extensions in glfwExtensionSupported</li>
  <li>[X11] Bugfix: More robust fullscreen mode (?)</li>
  <li>[X11] Bugfix: Runtime check of XF86VidMode support for the active
