Updated directory structure (added Lua)

--- a/readme.html
+++ b/readme.html
@@ -1,6 +1,6 @@
 <html>
 
-<!-- $Id: readme.html,v 1.41 2005-04-14 19:28:57 marcus256 Exp $ -->
+<!-- $Id: readme.html,v 1.42 2005-04-18 18:27:42 marcus256 Exp $ -->
 
 <head>
   <title>GLFW Readme file</title>
@@ -837,6 +837,7 @@ version of GLFW.
 <tr valign="top"><td><b>support</b></td><td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr valign="top"><td><b>&nbsp;&nbsp;&nbsp;d</b></td><td>&nbsp;</td><td>D support</td></tr>
 <tr valign="top"><td><b>&nbsp;&nbsp;&nbsp;delphi</b></td><td>&nbsp;</td><td>Delphi support</td></tr>
+<tr valign="top"><td><b>&nbsp;&nbsp;&nbsp;lua</b></td><td>&nbsp;</td><td>Lua support</td></tr>
 <tr valign="top"><td><b>&nbsp;&nbsp;&nbsp;masm</b></td><td>&nbsp;</td><td>MASM32 support</td></tr>
 <tr valign="top"><td><b>&nbsp;&nbsp;&nbsp;win32dll</b></td><td>&nbsp;</td><td>Compiled version of the GLFW Win32 DLL</td></tr>
 <tr valign="top"><td><b>&nbsp;&nbsp;&nbsp;visualbasic</b></td><td>&nbsp;</td><td>Visual Basic support</td></tr>
