--- a/readme.html
+++ b/readme.html
@@ -1,6 +1,6 @@
 <html>
 
-<!-- $Id: readme.html,v 1.43 2007-03-15 03:20:18 elmindreda Exp $ -->
+<!-- $Id: readme.html,v 1.44 2007-03-22 14:15:28 elmindreda Exp $ -->
 
 <head>
   <title>GLFW Readme File</title>
@@ -460,6 +460,7 @@ version of GLFW.</p>
   <li>[MacOSX] Replaced fullscreen code path with CGL version</li>
   <li>[MacOSX] Bugfix: Replaced Carbon event time source with <code>gettimeofday</code></li>
   <li>[MacOSX] Bugfix: Added code to minimize the dreaded OpenGL application startup jump</li>
+  <li>[MacOSX] Bugfix: Fixed broken implementation of <code>glfwSetMousePos</code> for windowed mode</li>
   <li>[AmigaOS] Obsoleted platform due to lack of maintainer and community interest</li>
   <li>[DOS] Obsoleted platform due to lack of maintainer and community interest</li>
 </ul>
