Cross-compiling support for MinGW.

--- a/readme.html
+++ b/readme.html
@@ -1,6 +1,6 @@
 <html>
 
-<!-- $Id: readme.html,v 1.45 2007-03-23 22:58:13 elmindreda Exp $ -->
+<!-- $Id: readme.html,v 1.46 2007-03-30 20:17:42 elmindreda Exp $ -->
 
 <head>
   <title>GLFW Readme File</title>
@@ -877,7 +877,7 @@ target="_blank">developer's mailing list</a>, or you could join us on
   remaining examples to the D language.</li><br>
 
   <li>Olivier Delannoy, for the initial implementation of FSAA support on
-  X11 and very timely nagging.</li>
+  X11, cross-compiling support for MinGW and very timely nagging.</li>
 
   <li>Glenn Lewis, for helping out with support for the D programming
   language.</li><br>
