--- a/readme.html
+++ b/readme.html
@@ -1,6 +1,6 @@
 <html>
 
-<!-- $Id: readme.html,v 1.46 2007-03-30 20:17:42 elmindreda Exp $ -->
+<!-- $Id: readme.html,v 1.47 2007-04-05 14:09:28 elmindreda Exp $ -->
 
 <head>
   <title>GLFW Readme File</title>
@@ -438,6 +438,7 @@ version of GLFW.</p>
   <li>Added <code>glfwReadMemoryImage</code> function for creating a <code>GLFWImage</code> object from an image file in a memory buffer</li>
   <li>Added <code>glfwLoadMemoryTexture2D</code> function for decoding an image file in a memory buffer into a texture</li>
   <li>Added <code>glfwLoadTextureImage2D</code> function for loading a <code>GLFWImage</code> object into a texture</li>
+  <li>Added cross-compilation support for MinGW under a Unix-like host</li>
   <li>Updates to the D bindings and all examples ported to modern D</li>
   <li>Bugfix: The interaction between key repeat and window focus code caused duplicate presses</li>
   <li>[Win32] Added pkgconfig file generation for Cygwin</li>
@@ -868,7 +869,7 @@ target="_blank">developer's mailing list</a>, or you could join us on
   implementation in GLFW.</li><br>
 
   <li>Bobyshev Alexander and Martins Mozeiko, for the original proposal of
-  an FSAA hint and their work on the Win32 implementation of FSAA.</li>
+  an FSAA hint and their work on the Win32 implementation of FSAA.</li><br>
 
   <li>Gerald Franz, who made GLFW compile under IRIX, and supplied patches
   for the X11 keyboard translation routine.</li><br>
