--- a/readme.html
+++ b/readme.html
@@ -1,6 +1,6 @@
 <html>
 
-<!-- $Id: readme.html,v 1.47 2007-04-05 14:09:28 elmindreda Exp $ -->
+<!-- $Id: readme.html,v 1.48 2007-05-05 17:47:15 elmindreda Exp $ -->
 
 <head>
   <title>GLFW Readme File</title>
@@ -445,6 +445,7 @@ version of GLFW.</p>
   <li>[Win32] Bugfix: Very small sleep periods were forced to higher value</li>
   <li>[Win32] Bugfix: The nmake makefile did not handle paths with spaces correctly</li>
   <li>[Win32] Bugfix: Removed assembly RDTSC timing code</li>
+  <li>[Win32] Bugfix: Hidden cursor was not clipped to windowed windows</li>
   <li>[X11] Added XRandR code path for fullscreen windows</li>
   <li>[X11] Added building of shared library</li>
   <li>[X11] Added <a href="http://tronche.com/gui/x/icccm/">ICCCM</a> WM fullscreen hints</li>
