--- a/readme.html
+++ b/readme.html
@@ -1,6 +1,6 @@
 <html>
 
-<!-- $Id: readme.html,v 1.48 2007-05-05 17:47:15 elmindreda Exp $ -->
+<!-- $Id: readme.html,v 1.49 2007-05-08 16:30:26 elmindreda Exp $ -->
 
 <head>
   <title>GLFW Readme File</title>
@@ -442,6 +442,7 @@ version of GLFW.</p>
   <li>Updates to the D bindings and all examples ported to modern D</li>
   <li>Bugfix: The interaction between key repeat and window focus code caused duplicate presses</li>
   <li>[Win32] Added pkgconfig file generation for Cygwin</li>
+  <li>[Win32] Added version number to WNDCLASS name</li>
   <li>[Win32] Bugfix: Very small sleep periods were forced to higher value</li>
   <li>[Win32] Bugfix: The nmake makefile did not handle paths with spaces correctly</li>
   <li>[Win32] Bugfix: Removed assembly RDTSC timing code</li>
@@ -803,7 +804,6 @@ version of GLFW.</p>
 <tr valign="top"><td><b>&nbsp;&nbsp;&nbsp;delphi</b></td><td>&nbsp;</td><td>Delphi support</td></tr>
 <tr valign="top"><td><b>&nbsp;&nbsp;&nbsp;lua</b></td><td>&nbsp;</td><td>Lua support</td></tr>
 <tr valign="top"><td><b>&nbsp;&nbsp;&nbsp;masm</b></td><td>&nbsp;</td><td>MASM32 support</td></tr>
-<tr valign="top"><td><b>&nbsp;&nbsp;&nbsp;win32dll</b></td><td>&nbsp;</td><td>Compiled version of the GLFW Win32 DLL</td></tr>
 <tr valign="top"><td><b>&nbsp;&nbsp;&nbsp;visualbasic</b></td><td>&nbsp;</td><td>Visual Basic support</td></tr>
 </table>
 <br><br>
