--- a/readme.html
+++ b/readme.html
@@ -88,12 +88,12 @@ DLL will also be compiled.</p>
 
 <p>If your compiler/system is not in the list, you will have to create new
 makefiles in the <b>lib\win32</b>, <b>lib/x11</b> or <b>lib/macosx</b>
-directory, and in the <b>examples</b> directory. If you have any problems, do
-not hesitate to contact me (I may not know how your compiler works, but I know
-the GLFW source code). I would also like to add support for more compilers and
-verify that GLFW compiles under as many systems as possible, so if you had to
-make any modifications or additions to the source and/or makefiles in order to
-make GLFW compile successfully, I would like to know what you had to do.</p>
+directory, and in the <b>examples</b> directory. If you have any problems,
+please use our support forum and bug tracker on SourceForge.net. We would like
+to add support for more compilers and verify that GLFW compiles under as many
+systems as possible, so if you had to make any modifications or additions to
+the source and/or makefiles in order to make GLFW compile successfully, we
+would like to know what you had to do.</p>
 
 
 <h3>2.1 Note for Microsoft Visual C++ users</h3>
@@ -276,8 +276,8 @@ your to share your code.</p>
 
 <p>The first point is covered in the <a href="docs/UsersGuide.pdf">GLFW
 Users Guide</a> and the <a href="docs/Reference.pdf">GLFW Reference
-Manual</a>, and I suggest that you read at least the Users Guide, since
-it is a good introduction to the GLFW API.</p>
+Manual</a>, and we suggest that you read at least the Users Guide, since
+it's a good introduction to the GLFW API.</p>
 
 <p>Designing and compiling programs that use GLFW is not very difficult.
 A few rules for successfully designing GLFW-based programs are presented
@@ -879,7 +879,7 @@ target="_blank">developer's mailing list</a>, or you could join us on
   remaining examples to the D language.</li><br>
 
   <li>Olivier Delannoy, for the initial implementation of FSAA support on
-  X11, cross-compiling support for MinGW and very timely nagging.</li>
+  X11, cross-compiling support for MinGW and general extreme usefulness.</li>
 
   <li>Glenn Lewis, for helping out with support for the D programming
   language.</li><br>
