--- a/readme.html
+++ b/readme.html
@@ -437,7 +437,7 @@ version of GLFW.</p>
   <li>Added <code>glfwLoadMemoryTexture2D</code> function for decoding an image file in a memory buffer into a texture</li>
   <li>Added <code>glfwLoadTextureImage2D</code> function for loading a <code>GLFWImage</code> object into a texture</li>
   <li>Added cross-compilation support for MinGW under a Unix-like host</li>
-  <li>Updates to the D bindings and all examples ported to modern D</li>
+  <li>D bindings updated and all examples ported to modern D</li>
   <li>Delphi bindings updated to reflect API additions</li>
   <li>Bugfix: The interaction between key repeat and window focus code caused duplicate presses</li>
   <li>[Win32] Added pkgconfig file generation for Cygwin</li>
