--- a/readme.html
+++ b/readme.html
@@ -465,6 +465,7 @@ version of GLFW.</p>
   <li>[MacOSX] Bugfix: Added code to minimize the dreaded OpenGL application startup jump</li>
   <li>[MacOSX] Bugfix: Fixed broken implementation of <code>glfwSetMousePos</code> for windowed mode</li>
   <li>[MacOSX] Bugfix: Fixed broken implementation of hidden cursor</li>
+  <li>[MacOSX] Bugfix: Capturing all displays and not just the main one</li>
   <li>[AmigaOS] Obsoleted platform due to lack of maintainer and community interest</li>
   <li>[DOS] Obsoleted platform due to lack of maintainer and community interest</li>
 </ul>
