--- a/readme.html
+++ b/readme.html
@@ -14,7 +14,7 @@
    <a href="http://www.opensource.org/docs/definition.php" target="_top"><img src="images/osicert.gif" border="0" width="72" height="60"></a>
   </td>
   <td align=center>
-   <font face="bookman old style,arial" size=+4><b>GLFW v2.6</b></font><br>
+   <font face="bookman old style,arial" size=+4><b>GLFW v2.6.1</b></font><br>
    <font face="bookman old style,arial" size=+3>source distribution</font>
   </td>
   <td width=90 valign=top align=right>
@@ -47,7 +47,7 @@
 <a name="sec1">
 <h2>1. Introduction</h2>
 
-<p>Welcome to version 2.6 of the GLFW OpenGL framework. GLFW is a free, open
+<p>Welcome to version 2.6.1 of the GLFW OpenGL framework. GLFW is a free, open
 source, portable framework for OpenGL application development. In short, it is
 a library that constitutes a powerful API for handling operating system
 specific tasks, such as opening an OpenGL window, reading keyboard and mouse
@@ -427,6 +427,11 @@ version of GLFW.</p>
 
 <a name="sec5">
 <p><h2>5. Version history</h2>
+
+<p><h3>v2.6.1</h3>
+<ul>
+  <li>Added the proper DEF file to the Visual C++ DLL project file</li>
+</ul>
 
 <p><h3>v2.6</h3>
 <ul>
