Updated API version.

--- a/readme.html
+++ b/readme.html
@@ -443,6 +443,7 @@ version of GLFW.</p>
   <li>[Win32] Bugfix: Improper use of wParam for WM_SYSCOMMAND</li>
   <li>[Win32] Bugfix: Derivatives of stream.c not cleaned up by compile.bat</li>
   <li>[Win32] Bugfix: Pointer for GetExtensionsStringARB was not initalised</li>
+  <li>[Win32] Bugfix: Updated API version in makefiles</li>
 </ul>
 
 <p><h3>v2.6</h3>
