--- a/readme.html
+++ b/readme.html
@@ -268,7 +268,7 @@ your to share your code.</p>
 
 
 <a name="sec4">
-<p><h2>4. Using GLFW</h2>
+<h2>4. Using GLFW</h2>
 
 <p>There are two aspects to using GLFW:
 
@@ -320,7 +320,7 @@ declarations).</p>
 
 <h3>4.2 Link with the right libraries</h3>
 
-<p><h4>4.2.1 Windows static library</h4>
+<h4>4.2.1 Windows static library</h4>
 
 <p>If you link with the static version of GLFW, it is also necessary to
 link with some system libraries that GLFW uses.</p>
@@ -432,9 +432,9 @@ version of GLFW.</p>
 
 
 <a name="sec5">
-<p><h2>5. Version history</h2>
+<h2>5. Version history</h2>
 
-<p><h3>v2.6.1</h3>
+<h3>v2.6.1</h3>
 <ul>
   <li>Added the proper DEF file to the Visual C++ DLL project file</li>
   <li>Changed all comments in public header file to plain C style</li>
@@ -446,7 +446,7 @@ version of GLFW.</p>
   <li>[Win32] Bugfix: Updated API version in makefiles</li>
 </ul>
 
-<p><h3>v2.6</h3>
+<h3>v2.6</h3>
 <ul>
   <li>Added <code>GLFW_FSAA_SAMPLES</code> multisampling hint (implemented on all platforms)</li>
   <li>Added <code>GLFW_WINDOW_NO_RESIZE</code> hint for non-resizable windows (implemented on all platforms)</li>
@@ -492,7 +492,7 @@ version of GLFW.</p>
   <li>[DOS] Obsoleted platform due to lack of maintainer and community interest</li>
 </ul>
 
-<p><h3>v2.5</h3>
+<h3>v2.5</h3>
 <ul>
  <li>Added the function glfwWaitEvents</li>
  <li>Added window close callback, which enables a program to prevent a user
@@ -527,7 +527,7 @@ version of GLFW.</p>
      timing on Centrino systems)</li>
 </ul>
 
-<p><h3>v2.4.2</h3>
+<h3>v2.4.2</h3>
 <ul>
  <li>Preliminary native Mac OS X support (via the Carbon interface)</li>
  <li>Preliminary DOS support (DJGPP + Mesa)</li>
@@ -568,7 +568,7 @@ version of GLFW.</p>
      all parameters (except for GLFW_ACCELERATED)</li>
 </ul>
 
-<p><h3>v2.4.1</h3>
+<h3>v2.4.1</h3>
 <ul>
  <li>Added AmigaOS support (preliminary)</li>
  <li>GLFW for the X Window System now works under Mac OS X</li>
@@ -578,7 +578,7 @@ version of GLFW.</p>
  <li>[X11] Bugfix: GLFW should now compile with Kylix</li>
 </ul>
 
-<p><h3>v2.4</h3>
+<h3>v2.4</h3>
 <ul>
  <li>Major source code rearrangement - much code is now shared between
      different platforms, and it should be easier to port GLFW to new
@@ -603,7 +603,7 @@ version of GLFW.</p>
      compilers (e.g. .NET) - Thanks Tim Little!</li>
 </ul>
 
-<p><h3>v2.3.2</h3>
+<h3>v2.3.2</h3>
 <ul>
  <li>Removed the silly limitation of 100 threads (the thread information
      is now kept in a linked list)</li>
@@ -615,7 +615,7 @@ version of GLFW.</p>
      and 'make x11-gcc' should now really force GCC)</li>
 </ul>
 
-<p><h3>v2.3.1</h3>
+<h3>v2.3.1</h3>
 <ul>
  <li>[X11] A minimalist configuration script was added that solves the
      issue with glXGetProcAddressARB, and unifies all Unix/X11 Makefiles
@@ -623,7 +623,7 @@ version of GLFW.</p>
      examples)</li>
 </ul>
 
-<p><h3>v2.3</h3>
+<h3>v2.3</h3>
 <ul>
  <li>Added OpenGL stereo rendering support</li>
  <li>Added a function for parsing the OpenGL version string
@@ -640,7 +640,7 @@ version of GLFW.</p>
      know if you have any related problems).</li>
 </ul>
 
-<p><h3>v2.2.3</h3>
+<h3>v2.2.3</h3>
 <ul>
  <li>Bugfix: Checking for GL_SGIS_generate_mipmap is more robust</li>
  <li>Bugfix: glfwLoadTexture2D will now fail if no window is opened</li>
@@ -653,7 +653,7 @@ version of GLFW.</p>
      pong3d should work on 16-bit displays).</li>
 </ul>
 
-<p><h3>v2.2.2</h3>
+<h3>v2.2.2</h3>
 <ul>
  <li>[Win32] Bugfix: Windows did not always get focus (this was a tough
      one!)</li>
@@ -662,12 +662,12 @@ version of GLFW.</p>
  <li>[X11] Bugfix: Linux joystick Y axis positions were reversed</li>
 </ul>
 
-<p><h3>v2.2.1</h3>
+<h3>v2.2.1</h3>
 <ul>
  <li>[X11] Added joystick support for Linux</li>
 </ul>
 
-<p><h3>v2.2</h3>
+<h3>v2.2</h3>
 <ul>
  <li>Added joystick support (only supported under Windows so far)</li>
  <li>Added joystick controls to pong3d.c (only 3 more lines of code)</li>
@@ -695,7 +695,7 @@ version of GLFW.</p>
      segmentation faults if no X server is available</li>
 </ul>
 
-<p><h3>v2.1</h3>
+<h3>v2.1</h3>
 <ul>
  <li>Added image and texture loading capabilities (support for the TGA
      file format at the moment)</li>
@@ -738,7 +738,7 @@ version of GLFW.</p>
  <li>[XFree86] Bugfix: Undesired video mode changes are now prevented</li>
 </ul>
 
-<p><h3>v2.0.3</h3>
+<h3>v2.0.3</h3>
 <ul>
  <li>Added precise CPU cycle based timing support (RDTSC) for x86
      CPUs (under both Windows and Unix)</li>
@@ -747,7 +747,7 @@ version of GLFW.</p>
      supported flag for CC, so it was removed from the CFLAGS list)</li>
 </ul>
 
-<p><h3>v2.0.2</h3>
+<h3>v2.0.2</h3>
 <ul>
  <li>Added a makefile option for building for X11 with 'cc' rather than
      'gcc' (useful for IRIX users for instance).</li>
@@ -760,7 +760,7 @@ version of GLFW.</p>
      versions of GLFW would not compile under IRIX).</li>
 </ul>
 
-<p><h3>v2.0.1</h3>
+<h3>v2.0.1</h3>
 <ul>
  <li>glfwTerminate() will now be called automatically upon normal program
      termination (using atexit())</li>
@@ -783,19 +783,19 @@ version of GLFW.</p>
  <li>Some bugfixes.</li>
 </ul>
 
-<p><h3>v1.0.2</h3>
+<h3>v1.0.2</h3>
 <ul>
  <li>Improved fullscreen functionality.</li>
  <li>Added fullscreen support for X11.</li>
 </ul>
 
-<p><h3>v1.0.1</h3>
+<h3>v1.0.1</h3>
 <ul>
  <li>Added support for the X Window System.</li>
  <li>Fixed bugs.</li>
 </ul>
 
-<p><h3>v1.0.0</h3>
+<h3>v1.0.0</h3>
 <ul>
  <li>First release.</li>
  <li>Only supported Windows.</li>
@@ -805,7 +805,7 @@ version of GLFW.</p>
 <p><hr>
 
 <a name="sec6">
-<p><h2>6. Directory structure of the GLFW distribution</h2>
+<h2>6. Directory structure of the GLFW distribution</h2>
 
 <p>Here is an overview of the directory structure of the GLFW distribution:
 
@@ -835,7 +835,7 @@ version of GLFW.</p>
 <p><hr>
 
 <a name="sec7">
-<p><h2>7. Contacting the project</h2>
+<h2>7. Contacting the project</h2>
 
 <p>The official GLFW web site can be found here:
 <a href="http://glfw.sourceforge.net/">http://glfw.sourceforge.net/</a>. It contains the latest version of GLFW, news and other information that is
