--- a/readme.html
+++ b/readme.html
@@ -51,7 +51,7 @@
 source, portable framework for OpenGL application development. In short, it is
 a library that constitutes a powerful API for handling operating system
 specific tasks, such as opening an OpenGL window, reading keyboard and mouse
-input, creating threads, and much more.</p>
+input, and more.</p>
 
 <p><hr>
 
@@ -435,6 +435,12 @@ version of GLFW.</p>
 
 <a name="sec5">
 <h2>5. Version history</h2>
+
+<h3>v2.6.1-lite</h3>
+<ul>
+  <li>Removed all threading support</li>
+  <li>Removed all image and texture loading support</li>
+</ul>
 
 <h3>v2.6.1</h3>
 <ul>
