--- a/readme.html
+++ b/readme.html
@@ -10,8 +10,8 @@
 <table border=0 cellspacing=0 cellpadding=0 width=100%>
  <tr>
   <td width=90 valign=top align=left>
-   <a href="http://www.opengl.org/" target="_top"><img src="images/opengl.gif" border="0" width="84" height="44"></a><br>
-   <a href="http://www.opensource.org/docs/definition.php" target="_top"><img src="images/osicert.gif" border="0" width="72" height="60"></a>
+   <a href="http://www.opengl.org/" target="_top"><img src="docs/images/opengl.gif" border="0" width="84" height="44"></a><br>
+   <a href="http://www.opensource.org/docs/definition.php" target="_top"><img src="docs/images/osicert.gif" border="0" width="72" height="60"></a>
   </td>
   <td align=center>
    <font face="bookman old style,arial" size=+4><b>GLFW v2.6.1</b></font><br>
