--- a/readme.html
+++ b/readme.html
@@ -58,7 +58,9 @@ input, and more.</p>
 <a name="sec2">
 <h2>2. Compiling GLFW and the example programs</h2>
 
-<p>A top level makefile can be found in the root directory of the GLFW
+<p>To compile GLFW, you will need <a href="http://www.cmake.org/">CMake</a>.</p>
+
+<!--p>A top level makefile can be found in the root directory of the GLFW
 distribution that has been designed to work with several compilers. If you
 simply enter the GLFW root directory in a shell and type <b>make</b> (or
 <b>nmake</b> or <b>gmake</b>, depending on the name of your make tool), and a
@@ -182,7 +184,7 @@ the top level Makefile.</p>
 subsystem and the Developer Tools, which can be found on your Mac OS X CD:s.
 When they are installed, simply open Terminal and go to the root GLFW
 directory. From there, you can build the library and all the examples by
-running make, i.e. <b>make macosx-gcc</b>.</p>
+running make, i.e. <b>make macosx-gcc</b>.</p-->
 
 
 
