--- a/readme.html
+++ b/readme.html
@@ -193,7 +193,7 @@ running make, i.e. <b>make macosx-gcc</b>.</p-->
 <a name="sec3">
 <h2>3. Installing GLFW</h2>
 
-<h3>3.1 Windows</h3>
+<!--h3>3.1 Windows</h3>
 
 <p>After compiling GLFW with MinGW or Cygwin, three files of interest should
 have appeared in the <b>lib\win32</b> directory. They are: <b>libglfw.a</b>
@@ -266,7 +266,7 @@ the environment variable <b>PREFIX</b> appropriately when running make.</p>
 <p>Note that the shared library is not installed by default, as you really
 should think twice before using it. GLFW is very small and very sutable for
 static linking. The GLFW license also allows static linking without requiring
-your to share your code.</p>
+your to share your code.</p-->
 
 <hr>
 
@@ -442,6 +442,7 @@ version of GLFW.</p>
 <ul>
   <li>Removed all threading support</li>
   <li>Removed all image and texture loading support</li>
+  <li>Imported CMake work from pre-3.0 branch</li>
 </ul>
 
 <h3>v2.6.1</h3>
