Initial code for WGL_ARB_create_context support.

--- a/readme.html
+++ b/readme.html
@@ -443,10 +443,12 @@ version of GLFW.</p>
   <li>Removed all threading support</li>
   <li>Removed all image and texture loading support</li>
   <li>Imported CMake work from pre-3.0 branch</li>
+  <li>Updated D, Delphi and Lua bindings to reflect API changes</li>
 </ul>
 
 <h3>v2.6.1</h3>
 <ul>
+  <li>Added <code>GLFW_OPENGL_VERSION_MAJOR</code>, <code>GLFW_OPENGL_VERSION_MINOR</code> and <code>GLFW_OPENGL_FORWARD_COMPATIBLE</code> hints for versioned context creation support</li>
   <li>Added the proper DEF file to the Visual C++ DLL project file</li>
   <li>Changed all comments in public header file to plain C style</li>
   <li>[X11] Added <code>x11-distro-install</code> install target, inteded for packagers</li>
