--- a/readme.html
+++ b/readme.html
@@ -442,6 +442,8 @@ version of GLFW.</p>
 <ul>
   <li>Removed all threading support</li>
   <li>Removed all image and texture loading support</li>
+  <li>Removed all build files not related to CMake</li>
+  <li>Removed all deprecated platforms</li>
   <li>Imported CMake work from pre-3.0 branch</li>
   <li>Updated D, Delphi and Lua bindings to reflect API changes</li>
 </ul>
