--- a/readme.html
+++ b/readme.html
@@ -5,7 +5,7 @@
 <head>
   <title>GLFW Readme File</title>
   <style type="text/css">
-    table { border-style: solid; border-width: thin; }
+    table { margin-left: 2em; border-style: solid; border-width: thin; }
     td { padding: 0.2em; border-style: solid; border-width: thin; }
     pre { margin-left: 2em; }
   </style>
@@ -630,11 +630,7 @@ native version of GLFW.</p>
     <td>Several example programs in C</td>
   </tr>
   <tr>
-    <td><code>include</code></td>
-    <td>&nbsp;</td>
-  </tr>
-  <tr>
-    <td><code>+- GL</code></td>
+    <td><code>include/GL</code></td>
     <td>The GLFW C/C++ header file</td>
   </tr>
   <tr>
@@ -642,15 +638,15 @@ native version of GLFW.</p>
     <td>The source code for GLFW</td>
   </tr>
   <tr>
-    <td><code>+- macosx</code>
+    <td><code>lib/macosx</code>
     <td>Mac OS X-specific code</td>
   </tr>
   <tr>
-    <td><code>+- win32</code>
+    <td><code>lib/win32</code>
     <td>Windows-specific code</td>
   </tr>
   <tr>
-    <td><code>+- x11</code></td>
+    <td><code>lib/x11</code></td>
     <td>Unix/X11-specific code</td>
   </tr>
 </table>
