--- a/readme.html
+++ b/readme.html
@@ -56,8 +56,9 @@ via the CMake build system.</p>
 
 <p class="pre"><pre>$ make install</pre></p>
 
-<p>Note that you may need to run this command as root or via sudo in order to
-install GLFW into the various system directories.</p>
+<p>Note that you may need to run this command as root or via
+<code>sudo(1)</code> in order to install GLFW into the various system
+directories.</p>
 
 <p>For Visual C++ and other integrated development environments, an installation
 target should appear in the by CMake generated project files.</p>
@@ -69,7 +70,7 @@ target should appear in the by CMake generated project files.</p>
 
 <p>
 <ol>
-  <li>How does the GLFW API work</li>
+  <li>How the GLFW API works</li>
   <li>How to compile programs that use GLFW</li>
 </ol>
 
