Added FAQ stub.

--- a/readme.html
+++ b/readme.html
@@ -17,14 +17,15 @@
 <h1>GLFW 2.6.1 <i>Lite</i></h1>
 
 <ol>
-  <li><a href="#sec1">Introduction</li></a>
-  <li><a href="#sec2">Compiling GLFW and the example programs</li></a>
-  <li><a href="#sec3">Installing GLFW</li></a>
-  <li><a href="#sec4">Using GLFW</li></a>
-  <li><a href="#sec5">Version history</li></a>
-  <li><a href="#sec6">Directory structure of the GLFW distribution</li></a>
-  <li><a href="#sec7">Contacting the project</li></a>
-  <li><a href="#sec8">Acknowledgements</li></a>
+  <li><a href="#sec1">Introduction</a></li>
+  <li><a href="#sec2">Compiling GLFW and the example programs</a></li>
+  <li><a href="#sec3">Installing GLFW</a></li>
+  <li><a href="#sec4">Using GLFW</a></li>
+  <li><a href="#sec9">Frequently Asked Questions</a></li>
+  <li><a href="#sec5">Version history</a></li>
+  <li><a href="#sec6">Directory structure of the GLFW distribution</a></li>
+  <li><a href="#sec7">Contacting the project</a></li>
+  <li><a href="#sec8">Acknowledgements</a></li>
 </ol>
 
 <a name="sec1">
@@ -270,7 +271,10 @@ that even though your machine may have Unix-style GL libraries, they are for
 use with the X Window System, and will <em>not</em> work with the Mac OS X
 native version of GLFW.</p>
 
-<a name="sec5">
+<a name="#sec9" />
+<h2>9. Frequently Asked Questions</h2>
+
+<a name="sec5" />
 <h2>5. Version history</h2>
 
 <h3>2.6.1 <i>Lite</i></h3>
